2007-04-30  Marcus Brinkmann  <marcus@g10code.de>

	* ecc.c (ec2os): Fix relocation of short numbers.

	* ecc.c (generate_key): Do not allocate D, which will be allocated
	by GEN_K.  Remove G.  Fix test if g_x, g_y resp. q_x, q_y are
	requested.
	(_gcry_ecc_generate): Release unneeded members of SK.
	* pubkey.c (sexp_to_key): Release NAME.

2007-04-28  Marcus Brinkmann  <marcus@g10code.de>

	* ac.c (gcry_ac_mpi): Remove member NAME_PROVIDED.
	(ac_data_mpi_copy, _gcry_ac_data_set, _gcry_ac_data_get_name)
	(_gcry_ac_data_get_index, ac_data_construct): Adjust handling of
	NAME accordingly.

2007-04-20  Werner Koch  <wk@g10code.com>

	* ecc.c (domain_parms): Add standard brainpool curves.

2007-04-18  Werner Koch  <wk@g10code.com>

	* ecc.c (generate_curve): Implement alias mechanism.

	* pubkey.c (sexp_elements_extract_ecc): New.
	(sexp_to_key): Add special case for ecc.
	(sexp_to_key, sexp_to_sig, sexp_to_enc, gcry_pk_genkey): Replace
	name_terminated stuff by a call to _gcry_sexp_nth_string.
	(gcry_pk_get_keygrip): Ditto.

2007-04-16  Werner Koch  <wk@g10code.com>

	* ecc.c (_gcry_ecc_generate): Renamed DUMMY to CURVE and use it.

2007-04-13  Marcus Brinkmann  <marcus@g10code.de>

	* ac.c (ac_data_construct): Cast const away to suppress compiler
	warning.

	* ecc.c (ecc_generate): Avoid compiler warning for unused argument
	DUMMY.
	(ecc_verify): Avoid compiler warning for unused arguments CMP and
	OPAQUEV.

2007-04-06  Werner Koch  <wk@g10code.com>

	* sha1.c (oid_spec_sha1): Add another oid from X9.62.

2007-03-28  Werner Koch  <wk@g10code.com>

	* pubkey.c (gcry_pk_genkey): Do not issue misc-key-info if it is
	empty.
	(gcry_pk_genkey): New parameter "curve".

	* ecc.c: Entirely rewritten with only a few traces of the old
	code left.
	(_gcry_ecc_generate): New.
	(generate_key) New arg NAME.
	(generate_curve): Ditto.  Return actual number of NBITS.

2007-03-26  Werner Koch  <wk@g10code.com>

	* pubkey.c (gcry_pk_genkey): Increase size of SKEY array and add a