@@ -50,14 +50,15 @@ Noteworthy changes in version 1.3.0 (unreleased)
  gcry_fast_random_poll	 NEW
  gcry_md_debug           NEW
  gcry_sexp_nth_string    NEW
- GCRYCTL_FAKED_RANDOM_P  NEW 
- GCRYCTL_DUMP_CONFIG     NEW
  GCRY_MD_SHA224          NEW
  GCRY_PK_USAGE_CERT      NEW
  GCRY_PK_USAGE_AUTH      NEW
  GCRY_PK_USAGE_UNKN      NEW
  GCRY_PK_ECDSA           NEW
- GCR_CIPHER_SEED         NEW
+ GCRY_CIPHER_SEED        NEW
+ GCRYCTL_FAKED_RANDOM_P  NEW 
+ GCRYCTL_DUMP_CONFIG     NEW
+ GCRYCTL_SET_RNDEGD_SOCKET  NEW.
  gcry_mpi_scan           CHANGED: Argument BUFFER is now void*.
  gcry_pk_algo_name       CHANGED: Returns "?" instead of NULL.
  gcry_cipher_algo_name   CHANGED: Returns "?" instead of "".
