@@ -1,8 +1,9 @@
 2007-04-30  Werner Koch  <wk@g10code.com>
 
-	* global.c (gcry_control): New.
-
 	* gcrypt.h.in (GCRYCTL_DUMP_CONFIG): New.
+	(GCRYCTL_SET_RNDEGD_SOCKET): New.
+	* global.c (gcry_control): Add GCRYCTL_DUMP_CONFIG and
+	GCRYCTL_SET_RNDEGD_SOCKET.
 
 2007-04-18  Werner Koch  <wk@g10code.com>
 
